--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -22,7 +22,7 @@
     android:gravity="center_vertical">
 
     <ImageView
-        android:src="@drawable/a6"
+        android:src="@drawable/dd"
         android:id="@+id/avatar"
         android:scaleType="centerCrop"
         android:layout_width="match_parent"
