--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -20,7 +20,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/refresh"
-    app:overlay="false"
+    app:overlay="true"
+    app:isLoadMore="true"
+    app:progress_size_type="big"
+    app:wave_color="#90ffffff"
     app:wave_show="true"
     app:progress_colors="@array/material_colors"
     app:wave_height_type="normal"
