--- a/app/src/main/res/values-v19/styles.xml
+++ b/app/src/main/res/values-v19/styles.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="CJJTheme" parent="BaseTheme">
         <!-- 建议在BaseActivity中代码声明 -->
-        <!-- <item name="android:windowTranslucentStatus">true</item> -->
+        <!--<item name="android:windowTranslucentStatus">true</item>-->
+        <item name="android:windowContentOverlay">@null</item>
     </style>
 </resources>
